# dianshang_agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEV_SPEC.md  README.md  cankao.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py
backend/app/: main.py
backend/app/agents/: ad_material_agent.py  base.py  competitor_analyzer_agent.py  detail_page_agent.py  faq_agent.py  image_copy_agent.py  llm_logger.py  llm_provider.py  mock_llm.py  orchestrator.py  product_parser_agent.py  provider_factory.py  real_llm.py  review_cluster_agent.py  title_optimizer_agent.py  weekly_report_agent.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  analysis_job.py  base.py  llm_call_log.py  project.py
backend/app/prompts/: ad_material.py  competitor_analyzer.py  (+1 more)
backend/tests/: test_all_sample_datasets.py  test_analysis_flow.py  test_csv_import.py  test_csv_validation.py  test_job.py  test_postgres_store.py  test_project_analysis_flow.py  test_report_generation.py  test_review_cluster.py  test_schemas.py  test_scoring.py  test_weekly_report_agent.py
frontend/: next.config.ts  package-lock.json
sample_data/beauty_serum/: competitors.csv  metrics.csv  product.csv  reviews.csv
sample_data/foundation/: competitors.csv  metrics.csv  product.csv  reviews.csv
sample_data/sunscreen/: competitors.csv  metrics.csv  product.csv  reviews.csv
tmp_backups/: projects-backup-20260624-164118.json
(+30 files in other folders)
